fix: missing spacing around details' content

--- a/src/scss/base/_details.scss
+++ b/src/scss/base/_details.scss
@@ -26,6 +26,10 @@ details {
     &:focus {
       background: palette( dominant, dark );
     }
+    
+    ~ * {
+      margin-top: rem( 32 );
+    }
   }
 }
 
